# kinfin

./: .env.example  .gitignore  .sourcery.yaml  Dockerfile.api  Dockerfile.ui  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: flake8.yml  sourcery.yml
docs/: getting-started.md
example/: curl_examples.md  taxon_idx_mapping.json
scripts/: orthodb_odb12_to_kinfin.py  simfin.py
src/: App.jsx  App.module.scss  kinfin.py  main.py  test_script.py
src/api/: __init__.py  clustering.json  column_descriptions.json  endpoints.py  fileparsers.py  sessions.py  utils.py
src/api/config/: limits.py
src/app/services/: client.js
src/app/store/: reducers.js
src/cli/: __init__.py  commands.py  validate.py
src/components/AttributeSelector/: attributeSelector.module.scss  index.jsx
src/components/CLusterSummary/: index.jsx
src/components/ClusterSummary/: ClusterSummary.module.scss
src/components/RunSummary/: index.jsx
src/core/: alo.py  alo_collections.py  build.py  clusters.py  config.py  datastore.py  input.py  logger.py  logic.py  proteins.py  results.py  utils.py
src/internal/: __init__.py  attribute_metrics.py  cluster_metrics.py  cluster_summary.py  config.py  counts.py  parsers.py  plots.py  utils.py
src/pages/: Home.jsx
src/pages/Dashboard/: dashboard.module.scss  index.jsx
src/ui/: .env.dist  README.md  jest.config.cjs  package-lock.json  package.json
src/ui/src/: App.jsx  App.module.scss  (+1 more)
tests/: a.py  conftest.py  run_dev_tests.sh
(+165 files in other folders)
