[bdist_wheel]
universal=1

[metadata]
description-file=README.md

[isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
profile = black

[flake8]
max-line-length = 88
extend-ignore = E203,E501,E701,W503,W504
inline-quotes = double
exclude = src/kinfin.py,scripts